--- a/ganttchart/manifest.json
+++ b/ganttchart/manifest.json
@@ -8,7 +8,7 @@
       "zh":"甘特图插件2.1cd .."
    },
    "description":{
-      "ja":"これはガントチャートを表示するプラグインです。",
+      "ja":"これはガントチャートを表示するプラグインです。cybozuのサンプルをカスタマイズしてあります。",
       "en":"This is Gantt chart plugin.",
       "zh":"此插件是以甘特图为例示范插件的开发方法"
    },
